# omegga-discord-lite

./: Cargo.toml  README.md  doc.json  omegga_plugin  plugin.json
.github/workflows/: build_and_bundle.yml
src/: discord.rs  format.rs  main.rs
