[package]
name = "omegga-discord-lite"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dashmap = "4.0.2"
futures = "0.3"
lazy_static = "1.4"
omegga = "0.2.9"
rand = "0.8.4"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
tokio = "1.10"
twilight-cache-inmemory = "0.6"
twilight-gateway = "0.6"
twilight-http = "0.6"
twilight-model = "0.6"
